@@ -314,6 +314,22 @@ void SCIPselectPtrRealRealInt(
    );
 
 
+/** partial sort of four joint arrays of pointers/Reals/Reals/SCIP_Bools/SCIP_Bools, sorted by first array in non-decreasing order around the \p k-th element,
+ *  see \ref SelectionAlgorithms for more information.
+ */
+SCIP_EXPORT
+void SCIPselectPtrRealRealBoolBool(
+   void**                ptrarray,           /**< pointer array to be sorted */
+   SCIP_Real*            realarray1,         /**< SCIP_Real array to be permuted in the same way */
+   SCIP_Real*            realarray2,         /**< SCIP_Real array to be permuted in the same way */
+   SCIP_Bool*            boolarray1,         /**< SCIP_Bool array to be permuted in the same way */
+   SCIP_Bool*            boolarray2,         /**< SCIP_Bool array to be permuted in the same way */
+   SCIP_DECL_SORTPTRCOMP((*ptrcomp)),        /**< data element comparator */
+   int                   k,                  /**< the index of the desired element, must be between 0 (search for maximum/minimum) and len - 1 */
+   int                   len                 /**< length of arrays */
+   );
+
+
 /** partial sort of four joint arrays of pointers/Reals/Reals/ints/SCIP_Bools, sorted by first array in non-decreasing order around the \p k-th element,
  *  see \ref SelectionAlgorithms for more information.
  */
@@ -339,6 +355,24 @@ void SCIPselectWeightedPtrRealRealInt(
    SCIP_Real*            realarray1,         /**< SCIP_Real array to be permuted in the same way */
    SCIP_Real*            realarray2,         /**< SCIP_Real array to be permuted in the same way */
    int*                  intarray,           /**< int array to be permuted in the same way */
+   SCIP_DECL_SORTPTRCOMP((*ptrcomp)),        /**< data element comparator */
+   SCIP_Real*            weights,            /**< (optional), nonnegative weights array for weighted median, or NULL (all weights are equal to 1) */
+   SCIP_Real             capacity,           /**< the maximum capacity that is exceeded by the median */
+   int                   len,                /**< length of arrays */
+   int*                  medianpos           /**< pointer to store the index of the weighted median, or NULL, if not needed */
+   );
+
+
+/** partial sort of four joint arrays of pointers/Reals/Reals/SCIP_Bools/SCIP_Bools, sorted by first array in non-decreasing order around the weighted median w.r.t. \p weights and capacity,
+ *  see \ref SelectionAlgorithms for more information.
+ */
+SCIP_EXPORT
+void SCIPselectWeightedPtrRealRealBoolBool(
+   void**                ptrarray,           /**< pointer array to be sorted */
+   SCIP_Real*            realarray1,         /**< SCIP_Real array to be permuted in the same way */
+   SCIP_Real*            realarray2,         /**< SCIP_Real array to be permuted in the same way */
+   SCIP_Bool*            boolarray1,         /**< SCIP_Bool array to be permuted in the same way */
+   SCIP_Bool*            boolarray2,         /**< SCIP_Bool array to be permuted in the same way */
    SCIP_DECL_SORTPTRCOMP((*ptrcomp)),        /**< data element comparator */
    SCIP_Real*            weights,            /**< (optional), nonnegative weights array for weighted median, or NULL (all weights are equal to 1) */
    SCIP_Real             capacity,           /**< the maximum capacity that is exceeded by the median */
